--- a/html/13.html
+++ b/html/13.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8" />
   <title>Flex Navbar</title>
   <style>
+    *{
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     .navbar {
       display: flex;
       justify-content: space-between;
@@ -11,16 +16,20 @@
       background-color: #333;
       color: white;
       padding: 20px;
+      /* border: 2px solid red; */
     }
 
     .logo {
       font-weight: bold;
       font-size: 20px;
+      /* border: 2px solid red; */
     }
 
     .menu {
+      width: 400px;
       display: flex;
       gap: 20px;
+      /* border: 2px solid red; */
     }
 
     .menu a {
@@ -34,12 +43,17 @@
       padding: 5px 10px;
       text-decoration: none;
       border-radius: 4px;
+      /* border: 2px solid red; */
+    
+    }
+    .first{
+      background img
     }
   </style>
 </head>
 <body>
 
-  <div class="navbar">
+  <!-- <div class="navbar">
     <div class="logo">Shravani Dance Academy</div>
 
     <div class="menu">
@@ -48,7 +62,13 @@
       <a href="#">Gallery</a>
     </div>
 
-    <a href="#" class="btn">Join</a>
+    <div class="btn">
+
+      <a href="#" class="btn">Join</a>
+    </div>
+  </div> -->
+  <div class="first">
+
   </div>
 
 </body>
